<resources>
    <string name="app_name">MeLi App</string>
    <string name="example_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean scelerisque magna vitae laoreet.</string>
    <string name="example_price">$ 1,000</string>
    <string name="example_discount">8% OFF</string>
    <string name="example_financial_plan">en 12x $ 83\u00B3\u00B3</string>
    <string name="example_shipment">Envío gratis</string>
    <string name="example_vendor">Vendido por Example</string>
    <string name="product_image_description">Product Image</string>
    <string name="product_detail_argument">productDetail</string>
    <string name="search_hint">Buscar por un producto</string>
    <string name="retry_button">Reintentar</string>
    <string name="unexpected_error_loading_data">Hubo un error al procesar su solicitud, intente nuevamente más tarde.</string>
    <string name="no_results_found">No hay resultados para la busqueda realizada.</string>
    <string name="no_results_description">No results found</string>
    <string name="start_search">Escriba un producto en la barra de busqueda para mostrar resultados.</string>
    <string name="financial_plan">en %1$dx $ %2$.2f</string>
    <string name="financial_plan_msi">en %1$dx $ %2$.2f MSI</string>
    <string name="fragment_product_detail_title">Producto</string>
    <string name="new_product">Nuevo</string>
    <string name="used_product">Usado</string>
    <string name="string_separator">|</string>
    <string name="sold_quantity">%d vendidos</string>
    <string name="product_plan_prefix">"en "</string>
    <string name="product_plan_detail">%1$dx $ %2$.2f sin interés</string>
</resources>