<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:padding="12dp">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/product_image_description"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/verticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".35" />

    <TextView
        android:id="@+id/productTitle"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:justificationMode="inter_word"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/verticalGuideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/example_text" />

    <TextView
        android:id="@+id/productPrice"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/productTitle"
        app:layout_constraintTop_toBottomOf="@+id/productTitle"
        tools:text="@string/example_price" />

    <TextView
        android:id="@+id/productPriceDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/green_color"
        app:layout_constraintBottom_toBottomOf="@id/productPrice"
        app:layout_constraintStart_toEndOf="@id/productPrice"
        tools:text="@string/example_discount" />

    <TextView
        android:id="@+id/productFinancialPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/productPrice"
        app:layout_constraintTop_toBottomOf="@id/productPrice"
        tools:text="@string/example_financial_plan" />

    <TextView
        android:id="@+id/productShipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_shipment"
        android:textColor="@color/green_color"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/productFinancialPlan"
        app:layout_constraintTop_toBottomOf="@id/productFinancialPlan" />

    <TextView
        android:id="@+id/productVendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/productShipment"
        app:layout_constraintTop_toBottomOf="@id/productShipment"
        tools:text="@string/example_vendor" />

</androidx.constraintlayout.widget.ConstraintLayout>